--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,48 +16,18 @@
 	<table>
 		<thead>
 			<tr>
-				 <th>id</th>
-				 <th>商品名</th>
+				<th>id</th>
+				<th>商品名</th>
 				<th>価格</th>
 				<th></th>
 				<th></th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
-				<td>1</td>
-				<td>サンプル商品1</td>
-				<td>101</td>
-				<td>
-					<form method="get">
-						<input type="submit" value="編集">
-					</form>
-				</td>
-				<td>
-					<form method="post">
-						<input type="submit" value="削除">
-					</form>
-				</td>
-			</tr>
-			<tr>
-				<td>2</td>
-				<td>サンプル商品2</td>
-				<td>102</td>
-				<td>
-					<form method="get">
-						<input type="submit" value="編集">
-					</form>
-				</td>
-				<td>
-					<form method="post">
-						<input type="submit" value="削除">
-					</form>
-				</td>
-			</tr>
-			<tr>
-				<td>3</td>
-				<td>サンプル商品3</td>
-				<td>103</td>
+			<tr th:each="item : ${items}">
+				<td th:text="${item.id}"></td>
+				<td th:text="${item.name}"></td>
+				<td th:text="${item.price}"></td>
 				<td>
 					<form method="get">
 						<input type="submit" value="編集">
