--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,7 @@
 				<th>id</th>
 				<th>商品名</th>
 				<th>価格</th>
+				<th>カテゴリー</th>
 				<th></th>
 				<th></th>
 			</tr>
@@ -28,6 +29,7 @@
 				<td th:text="${item.id}"></td>
 				<td th:text="${item.name}"></td>
 				<td th:text="${item.price}"></td>
+				<td th:text="${item.category.name}"></td>
 				<td>
 					<form method="get">
 						<input type="submit" value="編集">
